# django-dramatiq-pg

./: CHANGES.rst  README.rst  TODO  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
src/django_dramatiq_pg/: __init__.py  admin.py  apps.py  models.py  registry.py  router.py  settings.py  signals.py  tools.py  worker.py
src/django_dramatiq_pg/migrations/: 0001_initial.py  0002_alter_backgroundjob_table.py  0002_auto_20200329_2103.py  0003_auto_20200729_1222.py  0004_auto_20200729_1224.py
tests/: test_tools.py
tests/app/: settings.py  wsgi.py
