[tool.poetry]
name = "django-dramatiq-pg"
version = "1.0.4"
description = "Integration of Django with dramatiq-pg"
readme = "README.rst"
authors = ["Curtis Maloney <curtis@tinbrain.net>"]
license = "MIT"
homepage = "https://github.com/uptick/django-dramatiq-pg"

[tool.poetry.dependencies]
python = "^3.7"
django = ">= 2.2"
dramatiq-pg = ">= 0.8.0"

[tool.poetry.dev-dependencies]
psycopg2 = "^2.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
